--- a/UE5_03/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UE5_03/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -95,14 +95,14 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1536,Y=952)
+LastSize=(X=0,Y=0)
 LastExecutedLaunchDevice=Windows@EMILKA
 LastExecutedLaunchName=EMILKA
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=-1920,Y=5)
-MultipleInstancePositions=(X=-695,Y=220)
+MultipleInstancePositions=(X=54,Y=234)
 NewWindowWidth=1536
 NewWindowHeight=952
 
@@ -280,7 +280,7 @@ BP_Hero_Quinn_Blue_C=
 BP_Hero_Quinn_Green_C=
 BP_Hero_Quinn_Purple_C=
 BP_Hero_Quinn_Red_C=
-BP_Hero_Base_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,K2Node_BreakStruct.PinOptions.ShowPinForProperties,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.ActionMappings.ADS,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.FireWeapon,InputSettings.Bindings.ActionMappings.PauseGame,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings.SwitchWeapon,CapsuleComponent.Collision.Collision,
+BP_Hero_Base_C=
 BP_SHooter_Gamemode_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
 SpawnDefaultPawnFor_5=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
 SpawnDefaultPawnFor=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
@@ -348,6 +348,9 @@ BP_WeaponFX_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_Variable
 Svr_WeaponFired_45=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,K2Node_BreakStruct.PinOptions.ShowPinForProperties,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.ActionMappings.ADS,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.FireWeapon,InputSettings.Bindings.ActionMappings.PauseGame,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings.SwitchWeapon,CapsuleComponent.Collision.Collision,
 Svr_WeaponFired=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,K2Node_BreakStruct.PinOptions.ShowPinForProperties,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.ActionMappings.ADS,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.FireWeapon,InputSettings.Bindings.ActionMappings.PauseGame,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings.SwitchWeapon,CapsuleComponent.Collision.Collision,
 PhysicalMaterial=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,K2Node_BreakStruct.PinOptions.ShowPinForProperties,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.ActionMappings.ADS,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.FireWeapon,InputSettings.Bindings.ActionMappings.PauseGame,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings.SwitchWeapon,CapsuleComponent.Collision.Collision,
+RemoveInvalidSurfaces_2=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,K2Node_BreakStruct.PinOptions.ShowPinForProperties,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.ActionMappings.ADS,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.FireWeapon,InputSettings.Bindings.ActionMappings.PauseGame,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings.SwitchWeapon,CapsuleComponent.Collision.Collision,
+RemoveInvalidSurfaces=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,K2Node_BreakStruct.PinOptions.ShowPinForProperties,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.ActionMappings.ADS,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.FireWeapon,InputSettings.Bindings.ActionMappings.PauseGame,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings.SwitchWeapon,CapsuleComponent.Collision.Collision,
+BP_WeaponDecals_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,K2Node_BreakStruct.PinOptions.ShowPinForProperties,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.ActionMappings.ADS,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.FireWeapon,InputSettings.Bindings.ActionMappings.PauseGame,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings.SwitchWeapon,CapsuleComponent.Collision.Collision,
 
 [EditorStartup]
 LastLevel=/Game/Maps/Menu/MainMenu_Map
@@ -1864,11 +1867,38 @@ SoundCue.Attenuation=True
 SoundCue.Effects=True
 SoundCue.Voice Management=True
 SoundCue.Developer=True
+MetaSoundSettings.AutoUpdate=True
+MetaSoundSettings.Registration=True
+PhysicalMaterial.PhysicalMaterial=True
+PhysicalMaterial.Advanced=True
+PhysicalMaterial.Destruction=True
+PhysicalMaterial.PhysicalProperties=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.PhysicalMaterialMask=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
+BP_WeaponDecals_C.Tick=True
+BP_WeaponDecals_C.Replication=True
+BP_WeaponDecals_C.Rendering=True
+BP_WeaponDecals_C.Collision=True
+BP_WeaponDecals_C.Actor=True
+BP_WeaponDecals_C.Input=True
+BP_WeaponDecals_C.HLOD=True
+BP_WeaponDecals_C.WorldPartition=True
+BP_WeaponDecals_C.Events=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Characters/BP_Hero_Base.BP_Hero_Base
-OpenAssetsAtExit=/Game/Weapons/BP_WeaponFX.BP_WeaponFX
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1888,7 +1918,7 @@ ContentBrowserDrawer.ActiveTypeFilters=NiagaraSystem
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=ShowRedirectors
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/Weapons
+ContentBrowserDrawer.SelectedPaths=/Game/Maps/Menu
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1932,26 +1962,26 @@ ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Weapons/WeaponInfo_Table
-MRUItem1=/Game/MilitaryWeapSilver/Sound/Shotgun/Cues/ShotgunA_Fire_Cue
-MRUItem2=/Game/Weapons/S_WeaponInfo
-MRUItem3=/Game/Weapons/BP_WeaponFX
-MRUItem4=/Game/Characters/BP_Hero_Base
-MRUItem5=/Game/Maps/Menu/MainMenu_Map
-MRUItem6=/Game/MigratedSFX/NS_WeaponFire_Tracer_Shotgun
-MRUItem7=/Game/MigratedSFX/NS_WeaponFire_Tracer
-MRUItem8=/Game/MigratedSFX/NS_WeaponFire_ShellEject
-MRUItem9=/Game/MigratedSFX/NS_WeaponFire_MuzzleFlash_Rifle
-MRUItem10=/Game/MigratedSFX/NS_WeaponFire
-MRUItem11=/Game/MigratedSFX/NS_ImpactGlass
-MRUItem12=/Game/MigratedSFX/NS_ImpactDecals
-MRUItem13=/Game/MigratedSFX/NS_ImpactConcrete
-MRUItem14=/Game/MigratedSFX/NS_ImactSparksCharacter
-MRUItem15=/Game/MigratedSFX/NS_DeathCubes
-MRUItem16=/Game/MigratedSFX/NS_DamageNumbers
-MRUItem17=/Game/MigratedSFX/Collision
-MRUItem18=/Game/AI/BP_AI_Controller_Base
-MRUItem19=/Game/Maps/Map_01
+MRUItem0=/Game/Maps/Menu/MainMenu_Map
+MRUItem1=/Game/Characters/BP_Hero_Base
+MRUItem2=/Game/Weapons/BP_WeaponDecals
+MRUItem3=/Game/StarterContent/Materials/M_Glass
+MRUItem4=/Game/StarterContent/Materials/M_Concrete_Poured
+MRUItem5=/Game/Maps/Map_01
+MRUItem6=/Game/Weapons/PhM_Glass
+MRUItem7=/Game/Weapons/PhM_Concrete
+MRUItem8=/Game/Weapons/PhM_Body
+MRUItem9=/Game/MigratedSFX/NS_ImpactDecals
+MRUItem10=/Game/Weapons/WeaponInfo_Table
+MRUItem11=/Game/MilitaryWeapSilver/Sound/Shotgun/Cues/ShotgunA_Fire_Cue
+MRUItem12=/Game/Weapons/S_WeaponInfo
+MRUItem13=/Game/Weapons/BP_WeaponFX
+MRUItem14=/Game/MigratedSFX/NS_WeaponFire_Tracer_Shotgun
+MRUItem15=/Game/MigratedSFX/NS_WeaponFire_Tracer
+MRUItem16=/Game/MigratedSFX/NS_WeaponFire_ShellEject
+MRUItem17=/Game/MigratedSFX/NS_WeaponFire_MuzzleFlash_Rifle
+MRUItem18=/Game/MigratedSFX/NS_WeaponFire
+MRUItem19=/Game/MigratedSFX/NS_ImpactGlass
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
@@ -2141,6 +2171,12 @@ AIPerceptionStimuliSourceComponent="\"Object.AI Perception.RegisterAsSourceForSe
 /Game/MigratedSFX/NS_WeaponFire_Tracer_Shotgun.NS_WeaponFire_Tracer_Shotgun=0
 /Game/MilitaryWeapSilver/Sound/Shotgun/Cues/ShotgunA_Fire_Cue.ShotgunA_Fire_Cue=0
 /Game/Weapons/BP_WeaponFX.BP_WeaponFX=0
+/Game/Weapons/PhM_Body.PhM_Body=0
+/Game/Weapons/PhM_Concrete.PhM_Concrete=0
+/Game/Weapons/PhM_Glass.PhM_Glass=0
+/Game/StarterContent/Materials/M_Concrete_Poured.M_Concrete_Poured=0
+/Game/StarterContent/Materials/M_Glass.M_Glass=0
+/Game/Weapons/BP_WeaponDecals.BP_WeaponDecals=0
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
@@ -3340,6 +3376,7 @@ MovieRendererName=
 LastLogListing=LoadErrors
 
 [PlacementMode]
+RecentlyPlaced=/Game/StarterContent/Architecture/Wall_400x200.Wall_400x200;
 RecentlyPlaced=/Game/AI/BP_AI_Minion_Base.BP_AI_Minion_Base;
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 RecentlyPlaced=/Game/Gameplay/Test/XP_Trigger.XP_Trigger;
@@ -3464,4 +3501,11 @@ Theme0Label2=
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bHideUnrelatedNodes=False
+bUseUnsortedMenus=False
+
+[MaterialEditor]
+PrimType=1
 
