--- a/UE5_03/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UE5_03/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -95,14 +95,14 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1536,Y=952)
 LastExecutedLaunchDevice=Windows@EMILKA
 LastExecutedLaunchName=EMILKA
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=-1920,Y=5)
-MultipleInstancePositions=(X=54,Y=234)
+MultipleInstancePositions=(X=-385,Y=283)
 NewWindowWidth=1536
 NewWindowHeight=952
 
@@ -280,7 +280,7 @@ BP_Hero_Quinn_Blue_C=
 BP_Hero_Quinn_Green_C=
 BP_Hero_Quinn_Purple_C=
 BP_Hero_Quinn_Red_C=
-BP_Hero_Base_C=
+BP_Hero_Base_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,K2Node_BreakStruct.PinOptions.ShowPinForProperties,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.ActionMappings.ADS,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.FireWeapon,InputSettings.Bindings.ActionMappings.PauseGame,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings.SwitchWeapon,CapsuleComponent.Collision.Collision,
 BP_SHooter_Gamemode_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
 SpawnDefaultPawnFor_5=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
 SpawnDefaultPawnFor=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
@@ -351,6 +351,7 @@ PhysicalMaterial=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_Varia
 RemoveInvalidSurfaces_2=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,K2Node_BreakStruct.PinOptions.ShowPinForProperties,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.ActionMappings.ADS,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.FireWeapon,InputSettings.Bindings.ActionMappings.PauseGame,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings.SwitchWeapon,CapsuleComponent.Collision.Collision,
 RemoveInvalidSurfaces=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,K2Node_BreakStruct.PinOptions.ShowPinForProperties,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.ActionMappings.ADS,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.FireWeapon,InputSettings.Bindings.ActionMappings.PauseGame,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings.SwitchWeapon,CapsuleComponent.Collision.Collision,
 BP_WeaponDecals_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,K2Node_BreakStruct.PinOptions.ShowPinForProperties,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.ActionMappings.ADS,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.FireWeapon,InputSettings.Bindings.ActionMappings.PauseGame,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings.SwitchWeapon,CapsuleComponent.Collision.Collision,
+BP_WeaponImpact_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,K2Node_BreakStruct.PinOptions.ShowPinForProperties,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.ActionMappings.ADS,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.FireWeapon,InputSettings.Bindings.ActionMappings.PauseGame,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings.SwitchWeapon,CapsuleComponent.Collision.Collision,
 
 [EditorStartup]
 LastLevel=/Game/Maps/Menu/MainMenu_Map
@@ -838,7 +839,7 @@ AnimGraphNode_BlendSpacePlayer.Settings=True
 PropertyWrapper.Variable=True
 PropertyWrapper.DefaultValueCategory=True
 K2Node_VariableGet.Variable=True
-K2Node_VariableGet.DefaultValueCategory=True
+K2Node_VariableGet.DefaultValueCategory=False
 K2Node_VariableSet.Variable=True
 K2Node_VariableSet.DefaultValueCategory=True
 BP_SHooter_Gamemose_C.Tick=True
@@ -1896,9 +1897,20 @@ BP_WeaponDecals_C.Input=True
 BP_WeaponDecals_C.HLOD=True
 BP_WeaponDecals_C.WorldPartition=True
 BP_WeaponDecals_C.Events=True
+BP_WeaponImpact_C.Tick=True
+BP_WeaponImpact_C.Replication=True
+BP_WeaponImpact_C.Rendering=True
+BP_WeaponImpact_C.Collision=True
+BP_WeaponImpact_C.Actor=True
+BP_WeaponImpact_C.Input=True
+BP_WeaponImpact_C.HLOD=True
+BP_WeaponImpact_C.WorldPartition=True
+BP_WeaponImpact_C.Events=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Weapons/BP_WeaponImpact.BP_WeaponImpact
+OpenAssetsAtExit=/Game/Characters/BP_Hero_Base.BP_Hero_Base
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1918,7 +1930,7 @@ ContentBrowserDrawer.ActiveTypeFilters=NiagaraSystem
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=ShowRedirectors
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/Maps/Menu
+ContentBrowserDrawer.SelectedPaths=/Game/Weapons
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1962,26 +1974,26 @@ ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/Menu/MainMenu_Map
-MRUItem1=/Game/Characters/BP_Hero_Base
-MRUItem2=/Game/Weapons/BP_WeaponDecals
-MRUItem3=/Game/StarterContent/Materials/M_Glass
-MRUItem4=/Game/StarterContent/Materials/M_Concrete_Poured
-MRUItem5=/Game/Maps/Map_01
-MRUItem6=/Game/Weapons/PhM_Glass
-MRUItem7=/Game/Weapons/PhM_Concrete
-MRUItem8=/Game/Weapons/PhM_Body
-MRUItem9=/Game/MigratedSFX/NS_ImpactDecals
-MRUItem10=/Game/Weapons/WeaponInfo_Table
-MRUItem11=/Game/MilitaryWeapSilver/Sound/Shotgun/Cues/ShotgunA_Fire_Cue
-MRUItem12=/Game/Weapons/S_WeaponInfo
-MRUItem13=/Game/Weapons/BP_WeaponFX
-MRUItem14=/Game/MigratedSFX/NS_WeaponFire_Tracer_Shotgun
-MRUItem15=/Game/MigratedSFX/NS_WeaponFire_Tracer
-MRUItem16=/Game/MigratedSFX/NS_WeaponFire_ShellEject
-MRUItem17=/Game/MigratedSFX/NS_WeaponFire_MuzzleFlash_Rifle
-MRUItem18=/Game/MigratedSFX/NS_WeaponFire
-MRUItem19=/Game/MigratedSFX/NS_ImpactGlass
+MRUItem0=/Game/Characters/BP_Hero_Base
+MRUItem1=/Game/Weapons/BP_WeaponImpact
+MRUItem2=/Game/Maps/Menu/MainMenu_Map
+MRUItem3=/Game/Weapons/BP_WeaponDecals
+MRUItem4=/Game/StarterContent/Materials/M_Glass
+MRUItem5=/Game/StarterContent/Materials/M_Concrete_Poured
+MRUItem6=/Game/Maps/Map_01
+MRUItem7=/Game/Weapons/PhM_Glass
+MRUItem8=/Game/Weapons/PhM_Concrete
+MRUItem9=/Game/Weapons/PhM_Body
+MRUItem10=/Game/MigratedSFX/NS_ImpactDecals
+MRUItem11=/Game/Weapons/WeaponInfo_Table
+MRUItem12=/Game/MilitaryWeapSilver/Sound/Shotgun/Cues/ShotgunA_Fire_Cue
+MRUItem13=/Game/Weapons/S_WeaponInfo
+MRUItem14=/Game/Weapons/BP_WeaponFX
+MRUItem15=/Game/MigratedSFX/NS_WeaponFire_Tracer_Shotgun
+MRUItem16=/Game/MigratedSFX/NS_WeaponFire_Tracer
+MRUItem17=/Game/MigratedSFX/NS_WeaponFire_ShellEject
+MRUItem18=/Game/MigratedSFX/NS_WeaponFire_MuzzleFlash_Rifle
+MRUItem19=/Game/MigratedSFX/NS_WeaponFire
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
@@ -2177,6 +2189,7 @@ AIPerceptionStimuliSourceComponent="\"Object.AI Perception.RegisterAsSourceForSe
 /Game/StarterContent/Materials/M_Concrete_Poured.M_Concrete_Poured=0
 /Game/StarterContent/Materials/M_Glass.M_Glass=0
 /Game/Weapons/BP_WeaponDecals.BP_WeaponDecals=0
+/Game/Weapons/BP_WeaponImpact.BP_WeaponImpact=0
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
