--- a/UE5_03/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UE5_03/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -352,6 +352,7 @@ RemoveInvalidSurfaces_2=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Nod
 RemoveInvalidSurfaces=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,K2Node_BreakStruct.PinOptions.ShowPinForProperties,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.ActionMappings.ADS,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.FireWeapon,InputSettings.Bindings.ActionMappings.PauseGame,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings.SwitchWeapon,CapsuleComponent.Collision.Collision,
 BP_WeaponDecals_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,K2Node_BreakStruct.PinOptions.ShowPinForProperties,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.ActionMappings.ADS,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.FireWeapon,InputSettings.Bindings.ActionMappings.PauseGame,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings.SwitchWeapon,CapsuleComponent.Collision.Collision,
 BP_WeaponImpact_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,K2Node_BreakStruct.PinOptions.ShowPinForProperties,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.ActionMappings.ADS,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.FireWeapon,InputSettings.Bindings.ActionMappings.PauseGame,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings.SwitchWeapon,CapsuleComponent.Collision.Collision,
+BP_WeaponSounds_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,K2Node_BreakStruct.PinOptions.ShowPinForProperties,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.ActionMappings.ADS,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.FireWeapon,InputSettings.Bindings.ActionMappings.PauseGame,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings.SwitchWeapon,CapsuleComponent.Collision.Collision,
 
 [EditorStartup]
 LastLevel=/Game/Maps/Menu/MainMenu_Map
@@ -1906,11 +1907,22 @@ BP_WeaponImpact_C.Input=True
 BP_WeaponImpact_C.HLOD=True
 BP_WeaponImpact_C.WorldPartition=True
 BP_WeaponImpact_C.Events=True
+BP_WeaponImpact_C.Default=True
+MetasoundInterfacesView.Interfaces=True
+MetasoundEditorGraphInput.General=True
+MetasoundEditorGraphInput.DefaultValue=True
+BP_WeaponSounds_C.Tick=True
+BP_WeaponSounds_C.Replication=True
+BP_WeaponSounds_C.Rendering=True
+BP_WeaponSounds_C.Collision=True
+BP_WeaponSounds_C.Actor=True
+BP_WeaponSounds_C.Input=True
+BP_WeaponSounds_C.HLOD=True
+BP_WeaponSounds_C.WorldPartition=True
+BP_WeaponSounds_C.Events=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Weapons/BP_WeaponImpact.BP_WeaponImpact
-OpenAssetsAtExit=/Game/Characters/BP_Hero_Base.BP_Hero_Base
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1926,11 +1938,11 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.ActiveTypeFilters=NiagaraSystem
+ContentBrowserDrawer.ActiveTypeFilters=NiagaraSystem,MetaSoundSource
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=ShowRedirectors
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/Weapons
+ContentBrowserDrawer.SelectedPaths=/Game/MigratedSFX
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1974,26 +1986,26 @@ ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Characters/BP_Hero_Base
-MRUItem1=/Game/Weapons/BP_WeaponImpact
-MRUItem2=/Game/Maps/Menu/MainMenu_Map
-MRUItem3=/Game/Weapons/BP_WeaponDecals
-MRUItem4=/Game/StarterContent/Materials/M_Glass
-MRUItem5=/Game/StarterContent/Materials/M_Concrete_Poured
-MRUItem6=/Game/Maps/Map_01
-MRUItem7=/Game/Weapons/PhM_Glass
-MRUItem8=/Game/Weapons/PhM_Concrete
-MRUItem9=/Game/Weapons/PhM_Body
-MRUItem10=/Game/MigratedSFX/NS_ImpactDecals
-MRUItem11=/Game/Weapons/WeaponInfo_Table
-MRUItem12=/Game/MilitaryWeapSilver/Sound/Shotgun/Cues/ShotgunA_Fire_Cue
-MRUItem13=/Game/Weapons/S_WeaponInfo
-MRUItem14=/Game/Weapons/BP_WeaponFX
-MRUItem15=/Game/MigratedSFX/NS_WeaponFire_Tracer_Shotgun
-MRUItem16=/Game/MigratedSFX/NS_WeaponFire_Tracer
-MRUItem17=/Game/MigratedSFX/NS_WeaponFire_ShellEject
-MRUItem18=/Game/MigratedSFX/NS_WeaponFire_MuzzleFlash_Rifle
-MRUItem19=/Game/MigratedSFX/NS_WeaponFire
+MRUItem0=/Game/Weapons/BP_WeaponSounds
+MRUItem1=/Game/Weapons/WeaponInfo_Table
+MRUItem2=/Game/Weapons/S_WeaponInfo
+MRUItem3=/Game/Characters/BP_Hero_Base
+MRUItem4=/Game/MigratedSFX/MSS_Weapons_Shotgun_Fire
+MRUItem5=/Game/MigratedSFX/MSS_Weapons_Rifle_Fire
+MRUItem6=/Game/MigratedSFX/MS_WaveArrayCrossfader
+MRUItem7=/Game/MigratedSFX/MS_StereoHighShelf
+MRUItem8=/Game/MigratedSFX/MS_StereoGain
+MRUItem9=/Game/MigratedSFX/MS_RandomEQ
+MRUItem10=/Game/MigratedSFX/MS_LowAmmoTone
+MRUItem11=/Game/MigratedSFX/MS_GatedWavePlayer
+MRUItem12=/Game/MigratedSFX/MS_EqualPowerCrossfade
+MRUItem13=/Game/MigratedSFX/MSS_Weapons_Rifle2_Fire
+MRUItem14=/Game/MigratedSFX/MS_WavePlayerCrossfader
+MRUItem15=/Game/MigratedSFX/MSS_Weapons_Pistol_Fire
+MRUItem16=/Game/MigratedSFX/NS_DamageNumbers
+MRUItem17=/Game/Weapons/BP_WeaponImpact
+MRUItem18=/Game/Maps/Menu/MainMenu_Map
+MRUItem19=/Game/Weapons/BP_WeaponDecals
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
@@ -2190,6 +2202,19 @@ AIPerceptionStimuliSourceComponent="\"Object.AI Perception.RegisterAsSourceForSe
 /Game/StarterContent/Materials/M_Glass.M_Glass=0
 /Game/Weapons/BP_WeaponDecals.BP_WeaponDecals=0
 /Game/Weapons/BP_WeaponImpact.BP_WeaponImpact=0
+/Game/MigratedSFX/MS_EqualPowerCrossfade.MS_EqualPowerCrossfade=0
+/Game/MigratedSFX/MS_GatedWavePlayer.MS_GatedWavePlayer=0
+/Game/MigratedSFX/MS_LowAmmoTone.MS_LowAmmoTone=0
+/Game/MigratedSFX/MS_RandomEQ.MS_RandomEQ=0
+/Game/MigratedSFX/MS_StereoGain.MS_StereoGain=0
+/Game/MigratedSFX/MS_StereoHighShelf.MS_StereoHighShelf=0
+/Game/MigratedSFX/MS_WaveArrayCrossfader.MS_WaveArrayCrossfader=0
+/Game/MigratedSFX/MS_WavePlayerCrossfader.MS_WavePlayerCrossfader=0
+/Game/MigratedSFX/MSS_Weapons_Pistol_Fire.MSS_Weapons_Pistol_Fire=0
+/Game/MigratedSFX/MSS_Weapons_Rifle2_Fire.MSS_Weapons_Rifle2_Fire=0
+/Game/MigratedSFX/MSS_Weapons_Rifle_Fire.MSS_Weapons_Rifle_Fire=0
+/Game/MigratedSFX/MSS_Weapons_Shotgun_Fire.MSS_Weapons_Shotgun_Fire=0
+/Game/Weapons/BP_WeaponSounds.BP_WeaponSounds=0
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
@@ -3386,7 +3411,7 @@ FrameNumberDisplayFormat=Seconds
 MovieRendererName=
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=PIE
 
 [PlacementMode]
 RecentlyPlaced=/Game/StarterContent/Architecture/Wall_400x200.Wall_400x200;
