--- a/UE5_03/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UE5_03/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1943,9 +1943,7 @@ EditorNotifyObject.Category=True
 EditorNotifyObject.AnimLink=True
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Characters/BP_Hero_Base.BP_Hero_Base
-OpenAssetsAtExit=/Game/AI/BP_AI_Minion_Base.BP_AI_Minion_Base
+CleanShutdown=True
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -2009,26 +2007,26 @@ ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AI/BP_AI_Minion_Base
-MRUItem1=/Game/Characters/BP_Hero_Base
-MRUItem2=/Game/Framework/Interface/BPI_Damage_Player
-MRUItem3=/Game/ParagonMinions/Characters/Minions/Down_Minions/Animations/Melee/Attack_A_Montage
-MRUItem4=/Game/AI/ABP_AI_Minion_Melee
-MRUItem5=/Game/ParagonMinions/Characters/Minions/Down_Minions/Animations/Melee/Attack_E_SetA_Montage
-MRUItem6=/Game/Maps/Menu/MainMenu_Map
-MRUItem7=/Game/Maps/Map_01
-MRUItem8=/Game/Framework/BP_SHooter_Gamemode
-MRUItem9=/Game/Gameplay/BP_SpawnPoint_AI
-MRUItem10=/Game/Characters/BP_XP_Component
-MRUItem11=/Game/AI/BP_AI_Controller_Base
-MRUItem12=/Game/Weapons/BP_WeaponImpact
-MRUItem13=/Game/ParagonMinions/Characters/Minions/Dusk_Minions/Meshes/Minion_Lane_Melee_Core_ShadowCyl
-MRUItem14=/Game/ParagonMinions/Characters/Minions/Dusk_Minions/Meshes/Minion_Lane_Siege_Physics
-MRUItem15=/Game/ParagonMinions/Characters/Minions/Dusk_Minions/Meshes/Minion_Lane_Siege_Core_ShadowCyl
-MRUItem16=/Game/Framework/Interface/BPI_Damage_Interface
-MRUItem17=/Game/MigratedSFX/NS_DamageNumbers
-MRUItem18=/Game/ParagonMinions/Characters/Minions/Dusk_Minions/Materials/Shared/M_Minion_Dusk_Parent
-MRUItem19=/Game/ParagonMinions/Characters/Minions/Dusk_Minions/Materials/Shared/MI_Minion_Dusk_Core
+MRUItem0=/Game/Characters/BP_Hero_Base
+MRUItem1=/Game/AI/BP_AI_Minion_Base
+MRUItem2=/Game/Characters/ABP_Hero_Quinn
+MRUItem3=/Game/Framework/Interface/BPI_Damage_Player
+MRUItem4=/Game/ParagonMinions/Characters/Minions/Down_Minions/Animations/Melee/Attack_A_Montage
+MRUItem5=/Game/AI/ABP_AI_Minion_Melee
+MRUItem6=/Game/ParagonMinions/Characters/Minions/Down_Minions/Animations/Melee/Attack_E_SetA_Montage
+MRUItem7=/Game/Maps/Menu/MainMenu_Map
+MRUItem8=/Game/Maps/Map_01
+MRUItem9=/Game/Framework/BP_SHooter_Gamemode
+MRUItem10=/Game/Gameplay/BP_SpawnPoint_AI
+MRUItem11=/Game/Characters/BP_XP_Component
+MRUItem12=/Game/AI/BP_AI_Controller_Base
+MRUItem13=/Game/Weapons/BP_WeaponImpact
+MRUItem14=/Game/ParagonMinions/Characters/Minions/Dusk_Minions/Meshes/Minion_Lane_Melee_Core_ShadowCyl
+MRUItem15=/Game/ParagonMinions/Characters/Minions/Dusk_Minions/Meshes/Minion_Lane_Siege_Physics
+MRUItem16=/Game/ParagonMinions/Characters/Minions/Dusk_Minions/Meshes/Minion_Lane_Siege_Core_ShadowCyl
+MRUItem17=/Game/Framework/Interface/BPI_Damage_Interface
+MRUItem18=/Game/MigratedSFX/NS_DamageNumbers
+MRUItem19=/Game/ParagonMinions/Characters/Minions/Dusk_Minions/Materials/Shared/M_Minion_Dusk_Parent
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
